// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component create an snapshot 1`] = `
<div
  class="LoginPage"
>
  <div
    class="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
  >
    <div
      class="LoginDialog"
    >
      <div
        class="AvatarLogin"
      >
        <div
          class="MuiAvatar-root-29"
          size="80"
        >
          <img
            alt="User default avatar"
            class="MuiAvatar-img-31"
            src="http://quizup-players.imgix.net/avatars/Avatar_astronaut-large-hd.png"
          />
        </div>
      </div>
      <div
        class="InputLogin"
      >
        <div
          class="MuiFormControl-root-32"
          data-testid="login-email"
        >
          <div
            class="MuiInputBase-root-49 MuiInput-root-36 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-37"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input-59 MuiInput-input-44"
              id="login_username_field"
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        class="InputLogin"
      >
        <div
          class="MuiFormControl-root-32"
          data-testid="login-password"
        >
          <div
            class="MuiInputBase-root-49 MuiInput-root-36 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-37"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input-59 MuiInput-input-44 MuiInputBase-inputType-62 MuiInput-inputType-47"
              id="login_password_field"
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        class="LoginButton"
      >
        <button
          class="MuiButtonBase-root-92 MuiButton-root-66 MuiButton-text-68 MuiButton-flat-71"
          data-testid="login-submit"
          id="login_submit_button"
          primary="LOGIN"
          style="width:240px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-67"
          >
            LOGIN
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Login component create an snapshot while loading 1`] = `
<div
  class="LoginPage"
>
  <div
    class="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
  >
    <div
      class="LoginDialog"
    >
      <div
        class="AvatarLogin"
      >
        <div
          class="MuiAvatar-root-29"
          size="80"
        >
          <img
            alt="User default avatar"
            class="MuiAvatar-img-31"
            src="http://quizup-players.imgix.net/avatars/Avatar_astronaut-large-hd.png"
          />
        </div>
      </div>
      <div
        class="InputLogin"
      >
        <div
          class="MuiFormControl-root-32"
          data-testid="login-email"
        >
          <div
            class="MuiInputBase-root-49 MuiInput-root-36 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-37"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input-59 MuiInput-input-44"
              id="login_username_field"
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        class="InputLogin"
      >
        <div
          class="MuiFormControl-root-32"
          data-testid="login-password"
        >
          <div
            class="MuiInputBase-root-49 MuiInput-root-36 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-37"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input-59 MuiInput-input-44 MuiInputBase-inputType-62 MuiInput-inputType-47"
              id="login_password_field"
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        class="LoginButton"
      >
        <button
          class="MuiButtonBase-root-92 MuiButtonBase-disabled-93 MuiButton-root-66 MuiButton-text-68 MuiButton-flat-71 MuiButton-disabled-86"
          data-testid="login-submit"
          disabled=""
          id="login_submit_button"
          primary="LOGIN"
          style="width:240px"
          tabindex="-1"
          type="button"
        >
          <span
            class="MuiButton-label-67"
          >
            LOGIN
          </span>
        </button>
      </div>
      <span
        class="LoginLoading"
      >
        Loading...
      </span>
    </div>
  </div>
</div>
`;

exports[`Login component create an snapshot with errors 1`] = `
<div
  class="LoginPage"
>
  <div
    class="MuiPaper-root-2 MuiPaper-elevation1-5 MuiPaper-rounded-3 MuiCard-root-1"
  >
    <div
      class="LoginDialog"
    >
      <div
        class="AvatarLogin"
      >
        <div
          class="MuiAvatar-root-29"
          size="80"
        >
          <img
            alt="User default avatar"
            class="MuiAvatar-img-31"
            src="http://quizup-players.imgix.net/avatars/Avatar_astronaut-large-hd.png"
          />
        </div>
      </div>
      <div
        class="InputLogin"
      >
        <div
          class="MuiFormControl-root-32"
          data-testid="login-email"
        >
          <div
            class="MuiInputBase-root-49 MuiInput-root-36 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-37"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input-59 MuiInput-input-44"
              id="login_username_field"
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        class="InputLogin"
      >
        <div
          class="MuiFormControl-root-32"
          data-testid="login-password"
        >
          <div
            class="MuiInputBase-root-49 MuiInput-root-36 MuiInput-underline-40 MuiInputBase-formControl-50 MuiInput-formControl-37"
          >
            <input
              aria-invalid="false"
              class="MuiInputBase-input-59 MuiInput-input-44 MuiInputBase-inputType-62 MuiInput-inputType-47"
              id="login_password_field"
              type="password"
            />
          </div>
        </div>
      </div>
      <div
        class="LoginButton"
      >
        <button
          class="MuiButtonBase-root-92 MuiButton-root-66 MuiButton-text-68 MuiButton-flat-71"
          data-testid="login-submit"
          id="login_submit_button"
          primary="LOGIN"
          style="width:240px"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiButton-label-67"
          >
            LOGIN
          </span>
        </button>
      </div>
      <div
        class="MuiSnackbar-root-95 MuiSnackbar-anchorOriginBottomCenter-97"
        data-testid="error-message"
      >
        <div
          class="MuiTypography-root-112 MuiTypography-body1-121 MuiPaper-root-2 MuiPaper-elevation6-10 MuiSnackbarContent-root-109"
          direction="up"
          role="alertdialog"
        >
          <div
            class="MuiSnackbarContent-message-110"
          >
            Invalid user
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
